Projet GL/test/src/test/deca/context/invalid/increment1/type-not-declared.deca
//test rule (0.2)

// Raison : Opération partielle

// Résultats : Ligne 12 "type identifier not declared"

// Historique :
//  cree le 05/01/2023

{
    //Type not declared
    double x;

    x = 2.3;
}